<resources>
    <string name="app_name">CvetkovaPracticeNew</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Пароль</string>
    <string name="sign_in">Войти</string>
    <string name="registration">Регистрация</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="repeatPassword">Повторите пароль</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>